kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: uporabljajfacebook
  labels:
    app: uporabljajfacebook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: uporabljajfacebook
  template:
    metadata:
      labels:
        app: uporabljajfacebook
    spec:
      containers:
        - name: uporabljajfacebook
          image: uporabljajfacebook
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: 50Mi
              cpu: 50m
            limits:
              memory: 50Mi
              cpu: 50m
