kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uporabljajfacebook
spec:
  selector:
    app: uporabljajfacebook
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
