kustomize/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: uporabljajfacebook
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - uporabljajfacebook.djnd.si
        - uporabljajfacebook.danesjenovdan.si
      secretName: uporabljajfacebook-tls
  rules:
    - host: uporabljajfacebook.djnd.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uporabljajfacebook
                port:
                  number: 80
    - host: uporabljajfacebook.danesjenovdan.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: uporabljajfacebook
                port:
                  number: 80
